--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,9 @@ header h1 {
   color: #d4af37;
   font-size: 36px;
   text-transform: uppercase;
+  background: linear-gradient(90deg, #b8860b, #ffd700, #b8860b);
+    -webkit-background-clip: text;
+    color: transparent;
 }
 
 nav ul {
