--- a/styles.css
+++ b/styles.css
@@ -219,7 +219,7 @@ footer p {
   font-size: 48px;
   font-weight: bold;
   letter-spacing: 5px;
-  color: #d4af37;
+  /*color: #d4af37;*/
   background: -webkit-linear-gradient(90deg, #b8860b, #ffd700, #b8860b);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -228,7 +228,7 @@ footer p {
 .tagline {
   font-size: 12px;
   letter-spacing: 2px;
-  color: #d4af37;
+  /*color: #d4af37;*/
   margin-top: -10px;
   background: -webkit-linear-gradient(90deg, #b8860b, #ffd700, #b8860b);
   -webkit-background-clip: text;
@@ -238,8 +238,11 @@ footer p {
 .subtext {
   font-size: 14px;
   letter-spacing: 2px;
-  color: #d4af37;
+  /*color: #d4af37;*/
   margin-top: 10px;
+  background: -webkit-linear-gradient(90deg, #b8860b, #ffd700, #b8860b);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .image-container {
