--- a/styles.css
+++ b/styles.css
@@ -58,7 +58,8 @@ nav ul {
   nav ul {
     display: inline-block;
     width: auto; /* Adjust width if needed */
-    padding-right: 0; /* Adjust padding for smaller screens */
+    padding-right: 0; /* Adjust padding for smaller screens */ 
+    justify-content: flex-end;
     text-align: right; /* Align text to the left if needed */
   }
 }
